--- a/DemoApp/DemoApp/DemoApp/appsettings.json
+++ b/DemoApp/DemoApp/DemoApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Local": "Server=localhost;Database=schooldb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
